--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.7.0",
+		"@astrojs/react": "^3.5.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"astro": "^4.10.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"typescript": "^5.4.5"
 	},
 	"devDependencies": {
