--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "",
+	"name": "edu",
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
@@ -20,14 +20,11 @@
 		"@astrojs/tailwind": "^5.1.0",
 		"@fastify/middie": "^8.3.1",
 		"@fastify/static": "^7.0.4",
+		"@tomphttp/bare-server-node": "^2.0.3",
 		"@types/node": "^20.14.7",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
 		"astro": "^4.10.2",
 		"fastify": "^4.28.0",
 		"lucide-astro": "^0.395.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
 		"tailwindcss": "^3.4.4",
 		"tsx": "^4.15.7",
 		"typescript": "^5.4.5",
