--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"astro": "^4.10.2",
 		"fastify": "^4.28.0",
 		"lucide-astro": "^0.395.0",
+		"mime": "^4.0.3",
 		"tailwindcss": "^3.4.4",
 		"tsx": "^4.15.7",
 		"typescript": "^5.4.5",
