add UV, make placeholder pages, use prettier for astro files

--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,8 @@
       "**/dist/**",
       "**/.astro/**",
       "**/node_modules/**",
-      "**/assets/bundled/**"
+      "**/assets/bundled/**",
+      "*.astro"
     ]
   },
   "javascript": {
