--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "astro preview",
     "typecheck": "astro check",
     "astro": "astro",
-    "biome": "biome check --write .",
-    "precommit": "pnpm biome && pnpm typecheck",
+    "precommit": "pnpm lint && pnpm format && pnpm typecheck",
     "lint": "biome lint --write .",
-    "format": "biome format --write ."
+    "format": "prettier --write . && biome format --write ."
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -20,8 +19,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fastify/middie": "^8.3.1",
     "@fastify/static": "^7.0.4",
+    "@mercuryworkshop/bare-mux": "^1.1.0",
+    "@mercuryworkshop/epoxy-transport": "^1.1.0",
     "@tomphttp/bare-server-node": "^2.0.3",
-    "@types/node": "^20.14.7",
     "astro": "^4.10.2",
     "fastify": "^4.28.0",
     "lucide-astro": "^0.395.0",
@@ -29,9 +29,13 @@
     "tailwindcss": "^3.4.4",
     "tsx": "^4.15.7",
     "typescript": "^5.4.5",
+    "vite-plugin-static-copy": "^1.0.5",
     "wisp-server-node": "^1.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.2"
+    "@biomejs/biome": "1.8.2",
+    "@types/node": "^20.14.7",
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0"
   }
 }
