--- a/.github/workflows/biome.yaml
+++ b/.github/workflows/biome.yaml
@@ -1,5 +1,18 @@
-- name: Setup Biome CLI
-  uses: biomejs/setup-biome@v2
+name: Code quality
 
-- name: Run Biome
-  run: biome ci .
+on:
+  push:
+  pull_request:
+
+jobs:
+  quality:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Biome
+        uses: biomejs/setup-biome@v2
+        with:
+          version: latest
+      - name: Run Biome
+        run: biome ci .
