--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/node": "^8.3.1",
+    "@astrojs/node": "^8.3.2",
     "@astrojs/tailwind": "^5.1.0",
     "@fastify/middie": "^8.3.1",
     "@fastify/static": "^7.0.4",
     "@mercuryworkshop/bare-mux": "^1.1.0",
     "@mercuryworkshop/epoxy-transport": "^1.1.0",
     "@tomphttp/bare-server-node": "^2.0.3",
-    "astro": "^4.11.0",
+    "astro": "^4.11.5",
     "fastify": "^4.28.0",
-    "lucide-astro": "^0.395.0",
+    "lucide-astro": "^0.399.0",
     "mime": "^4.0.3",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.15.7",
@@ -33,8 +33,9 @@
     "wisp-server-node": "^1.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.2",
+    "@biomejs/biome": "1.8.3",
     "@types/node": "^20.14.8",
+    "daisyui": "^4.12.10",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0"
   }
