--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "preview": "astro preview",
     "typecheck": "astro check",
     "astro": "astro",
-    "precommit": "pnpm lint && pnpm format && biome check --write . && pnpm typecheck",
-    "lint": "biome lint --write .",
-    "format": "prettier --write . && biome format --write ."
+    "precommit": "pnpm check && pnpm typecheck",
+    "check": "prettier --write . && biome check --write ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.1",
+    "@astrojs/check": "^0.8.2",
     "@astrojs/node": "^8.3.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@fastify/compress": "^7.0.3",
     "@fastify/middie": "^8.3.1",
     "@fastify/static": "^7.0.4",
-    "@mercuryworkshop/bare-mux": "^1.1.0",
-    "@mercuryworkshop/epoxy-transport": "^2.1.0",
-    "@tomphttp/bare-server-node": "^2.0.3",
-    "astro": "^4.11.5",
-    "fastify": "^4.28.0",
+    "@mercuryworkshop/bare-mux": "^2.0.3",
+    "@mercuryworkshop/epoxy-transport": "^2.1.3",
+    "@mercuryworkshop/wisp-js": "^0.1.1",
+    "@titaniumnetwork-dev/ultraviolet": "^3.2.6",
+    "astro": "^4.12.2",
+    "fastify": "^4.28.1",
     "lucide-astro": "^0.408.0",
     "mime": "^4.0.4",
-    "tailwindcss": "^3.4.4",
-    "tsx": "^4.15.7",
-    "typescript": "^5.5.2",
-    "vite-plugin-static-copy": "^1.0.5",
-    "wisp-server-node": "^1.1.0"
+    "sharp": "^0.33.4",
+    "tailwindcss": "^3.4.6",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.4",
+    "vite-plugin-static-copy": "^1.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
