--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "check": "prettier --write . && biome check --write ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.2",
+    "@astrojs/check": "^0.8.3",
     "@astrojs/node": "^8.3.2",
     "@astrojs/tailwind": "^5.1.0",
     "@fastify/compress": "^7.0.3",
     "@fastify/middie": "^8.3.1",
     "@fastify/static": "^7.0.4",
-    "@mercuryworkshop/bare-mux": "^2.0.3",
-    "@mercuryworkshop/epoxy-transport": "^2.1.3",
+    "@mercuryworkshop/bare-mux": "2.0.4",
+    "@mercuryworkshop/epoxy-transport": "2.1.5",
     "@mercuryworkshop/wisp-js": "^0.1.1",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.6",
-    "astro": "^4.12.2",
+    "astro": "^4.12.3",
     "fastify": "^4.28.1",
     "lucide-astro": "^0.414.0",
     "mime": "^4.0.4",
     "sharp": "^0.33.4",
-    "tailwindcss": "^3.4.6",
-    "tsx": "^4.16.2",
+    "tailwindcss": "^3.4.7",
+    "tsx": "^4.16.3",
     "typescript": "^5.5.4",
     "vite-plugin-static-copy": "^1.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@types/node": "^20.14.12",
+    "@types/node": "^20.14.13",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
