--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/check": "^0.9.1",
     "@astrojs/node": "^8.3.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@fastify/basic-auth": "^5.1.1",
     "@fastify/compress": "^7.0.3",
     "@fastify/middie": "^8.3.1",
     "@fastify/static": "^7.0.4",
@@ -30,13 +31,13 @@
     "mime": "^4.0.4",
     "sharp": "^0.33.4",
     "tailwindcss": "^3.4.7",
-    "tsx": "^4.16.3",
+    "tsx": "^4.16.5",
     "typescript": "^5.5.4",
     "vite-plugin-static-copy": "^1.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@types/node": "^20.14.13",
+    "@types/node": "^20.14.14",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
