chore: update asset card + start settings page

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ pnpm-debug.log*
 .idea/
 
 package-lock.json
+
+# Interstellar Assets Local (Testing)
+/public/assets/json/
+/public/assets/media/icons/
