--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@mercuryworkshop/epoxy-transport": "2.1.13",
     "@mercuryworkshop/wisp-js": "^0.3.2",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.7",
-    "astro": "^4.15.11",
+    "astro": "^4.16.2",
     "fastify": "^5.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-astro": "^0.447.0",
     "mime": "^4.0.4",
     "sharp": "^0.33.5",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.7.4",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
