--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "6.0.0",
   "scripts": {
     "dev": "astro preferences disable --global devToolbar && astro dev",
-    "start": "tsx index.ts",
-    "build": "pnpm i && astro check && astro build",
+    "start": "pnpm disable && tsx index.ts",
+    "build": "astro check && astro build",
     "typecheck": "astro check",
     "astro": "astro",
     "disable": "npx astro telemetry disable",
