--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
-# build output
-dist/
-.astro/
-.vercel/
+# Deep Directories
+**/dist
+**/node_modules
+**/.vercel
+**/.astro
 
-# dependencies
-node_modules/
-
-# logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# environment variables
+# Environment Variables 
 .env
-.env.production
