--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
       "@/*": ["src/*"]
     }
   },
-  "exclude": ["node_modules", "dist", "public/assets/bundled/**"]
+  "exclude": ["node_modules", "dist", "public"]
 }
