--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/node": "^9.0.0",
-    "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/node": "^9.4.3",
+    "@astrojs/tailwind": "^6.0.2",
     "@fastify/basic-auth": "^6.0.2",
     "@fastify/compress": "^8.0.1",
     "@fastify/middie": "^9.0.2",
@@ -24,7 +24,8 @@
     "@mercuryworkshop/epoxy-transport": "2.1.27",
     "@mercuryworkshop/wisp-js": "^0.3.3",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
-    "astro": "^5.1.5",
+    "astro": "^5.13.5",
+    "dompurify": "^3.2.3",
     "fastify": "^5.2.1",
     "js-cookie": "^3.0.5",
     "lucide-astro": "^0.471.0",
@@ -33,8 +34,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "vite-plugin-static-copy": "^2.2.0",
-    "dompurify": "^3.2.3"
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
