--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
   },
   "pnpm": {
     "overrides": {
-      "cookie": "^0.7.0"
+      "cookie": "^0.7.0",
+      "devalue": "~5.3.2",
+      "nanoid": "~3.3.8",
+      "brace-expansion": "~2.0.2"
     }
   },
   "resolutions": {
