--- a/.github/workflows/biome.yaml
+++ b/.github/workflows/biome.yaml
@@ -1,10 +1,13 @@
 name: Code quality
+
 permissions:
   contents: read
 
 on:
   push:
+    branches: [main]
   pull_request:
+    branches: [main]
 
 jobs:
   quality:
@@ -12,9 +15,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
         with:
           version: latest
+
       - name: Run Biome
         run: biome ci .
