--- a/biome.json
+++ b/biome.json
@@ -1,14 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "files": {
-    "ignore": [
-      "**/pnpm-lock.yaml",
-      "**/dist/**",
-      "**/node_modules/**",
-      "**/assets/bundled/**",
-      "*.min.json",
-      "**/*.astro"
-    ]
+    "ignore": ["**/pnpm-lock.yaml", "**/dist/**", "**/node_modules/**", "**/assets/bundled/**", "*.min.json", "**/*.astro"]
   },
   "organizeImports": {
     "enabled": true
@@ -23,7 +16,7 @@
     "indentStyle": "space",
     "indentWidth": 2,
     "lineEnding": "lf",
-    "lineWidth": 85,
+    "lineWidth": 250,
     "attributePosition": "auto"
   },
   "javascript": {
