--- a/.github/workflows/biome.yaml
+++ b/.github/workflows/biome.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
         with:
-          version: latest
+          version: 2.2.2
 
       - name: Run Biome
         run: biome ci .
