Fix false positive errors

--- a/biome.json
+++ b/biome.json
@@ -29,5 +29,18 @@
     "linter": {
       "enabled": true
     }
-  }
+  },
+  "overrides": [
+    {
+      "includes": ["**/*.astro"],
+      "linter": {
+        "rules": {
+          "correctness": {
+            "noUnusedImports": "off",
+            "noUnusedVariables": "warn"
+          }
+        }
+      }
+    }
+  ]
 }
