--- a/biome.json
+++ b/biome.json
@@ -37,7 +37,7 @@
         "rules": {
           "correctness": {
             "noUnusedImports": "off",
-            "noUnusedVariables": "warn"
+            "noUnusedVariables": "off"
           }
         }
       }
