--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "6.0.0",
   "scripts": {
-    "dev": "astro preferences disable --global devToolbar && astro dev",
+    "dev": "astro dev",
     "start": "tsx index.ts",
     "build": "astro check && astro build",
     "typecheck": "astro check",
