--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "start": "tsx index.ts",
     "build": "astro check && astro build",
+    "preview": "astro preview",
     "typecheck": "astro check",
     "astro": "astro",
     "disable": "npx astro telemetry disable",
@@ -15,6 +16,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^9.4.3",
+    "@astrojs/react": "latest",
     "@astrojs/tailwind": "^6.0.2",
     "@fastify/basic-auth": "^6.2.0",
     "@fastify/compress": "^8.0.1",
@@ -30,9 +32,11 @@
     "fastify": "^5.6.0",
     "js-cookie": "^3.0.5",
     "lucide-astro": "^0.471.0",
+    "lucide-react": "^0.454.0",
     "mime": "^4.0.7",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "sharp": "^0.34.4",
-    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "^5.7.3",
     "vite-plugin-static-copy": "^2.3.2"
@@ -41,8 +45,14 @@
     "@biomejs/biome": "2.2.4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.2",
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3",
+    "autoprefixer": "^10",
+    "postcss": "^8",
     "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   },
   "pnpm": {
     "overrides": {
