--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "@astrojs/react": "latest",
     "@astrojs/tailwind": "^6.0.2",
     "@fastify/basic-auth": "^6.2.0",
-    "@fastify/compress": "^8.0.1",
+    "@fastify/compress": "^8.1.0",
     "@fastify/middie": "^9.0.3",
     "@fastify/static": "^8.2.0",
     "@mercuryworkshop/bare-mux": "2.1.7",
-    "@mercuryworkshop/epoxy-transport": "2.1.27",
+    "@mercuryworkshop/epoxy-transport": "2.1.28",
     "@mercuryworkshop/wisp-js": "^0.3.3",
     "@playform/compress": "^0.2.0",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
-    "astro": "^5.13.10",
+    "astro": "5.15.2",
     "dompurify": "^3.2.4",
-    "fastify": "^5.6.0",
+    "fastify": "^5.6.1",
     "js-cookie": "^3.0.5",
-    "lucide-astro": "^0.471.0",
+    "lucide-astro": "^0.548.0",
     "lucide-react": "^0.454.0",
     "mime": "^4.0.7",
     "react": "19.2.0",
@@ -39,7 +39,7 @@
     "sharp": "^0.34.4",
     "tsx": "^4.20.5",
     "typescript": "^5.7.3",
-    "vite-plugin-static-copy": "^2.3.2"
+    "vite-plugin-static-copy": "^3.1.4"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
