--- a/biome.json
+++ b/biome.json
@@ -1,20 +1,22 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.9/schema.json",
+  "files": {
+    "ignoreUnknown": true,
+    "includes": ["**", "!**/src/global.css", "!**/.astro"]
+  },
   "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true
-    },
-    "includes": ["**", "!**/pnpm-lock.yaml", "!**/dist/**", "!**/node_modules/**", "!**/assets/bundled/**", "!**/.astro/**"]
+    }
   },
   "formatter": {
     "indentStyle": "space",
     "indentWidth": 2,
     "lineEnding": "lf",
     "lineWidth": 320,
-    "attributePosition": "auto",
-    "includes": ["**", "!**/pnpm-lock.yaml", "!**/dist/**", "!**/node_modules/**", "!**/assets/bundled/**", "!**/.astro/**"]
+    "attributePosition": "auto"
   },
   "javascript": {
     "formatter": {
@@ -27,7 +29,10 @@
       "indentWidth": 3
     },
     "linter": {
-      "enabled": true
+      "enabled": false
+    },
+    "parser": {
+      "cssModules": true
     }
   },
   "overrides": [
