--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "typecheck": "astro check",
+    "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "astro": "astro",
     "disable": "npx astro telemetry disable",
     "precommit": "pnpm typecheck && pnpm check",
@@ -15,7 +16,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
-    "@astrojs/node": "^9.5.1",
+    "@astrojs/node": "^9.5.2",
     "@astrojs/react": "latest",
     "@astrojs/tailwind": "^6.0.2",
     "@fastify/basic-auth": "^6.2.0",
@@ -24,10 +25,10 @@
     "@fastify/static": "^8.2.0",
     "@mercuryworkshop/bare-mux": "2.1.8",
     "@mercuryworkshop/epoxy-transport": "2.1.28",
+    "@mercuryworkshop/scramjet": "https://github.com/MercuryWorkshop/scramjet/releases/download/latest/mercuryworkshop-scramjet-2.0.0-alpha.tgz",
     "@mercuryworkshop/wisp-js": "^0.4.1",
     "@playform/compress": "^0.2.0",
-    "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
-    "astro": "5.16.6",
+    "astro": "5.17.1",
     "dompurify": "^3.3.1",
     "fastify": "^5.6.1",
     "js-cookie": "^3.0.5",
