--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "interstellar",
   "type": "module",
-  "version": "6.0.0",
+  "version": "7.0.0",
   "scripts": {
     "dev": "astro dev",
-    "start": "tsx index.ts",
+    "start": "bun run index.ts",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "typecheck": "astro check",
-    "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
+    "clean": "rm -rf dist",
     "astro": "astro",
-    "disable": "npx astro telemetry disable",
-    "precommit": "pnpm typecheck && pnpm check",
+    "disable": "bunx astro telemetry disable",
+    "precommit": "bun run typecheck && bun run check",
     "check": "prettier --write . && biome check --write ."
   },
   "dependencies": {
@@ -52,18 +52,12 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "tailwindcss": "^3.4.19",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.19"
   },
-  "pnpm": {
-    "overrides": {
-      "cookie": "^0.7.0",
-      "devalue": "~5.3.2",
-      "nanoid": "~3.3.8",
-      "brace-expansion": "~2.0.2"
-    }
-  },
-  "resolutions": {
-    "cookie": "^0.7.0"
+  "overrides": {
+    "cookie": "^0.7.0",
+    "devalue": "~5.3.2",
+    "nanoid": "~3.3.8",
+    "brace-expansion": "~2.0.2"
   }
 }
