--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "astro": "astro",
     "disable": "bunx astro telemetry disable",
     "precommit": "bun run typecheck && bun run check",
-    "check": "prettier --write . && biome check --write ."
+    "check": "biome check --write ."
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
@@ -50,8 +50,6 @@
     "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.23",
     "postcss": "^8",
-    "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
     "tailwindcss": "^3.4.19"
   },
   "overrides": {
