--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.3.9/schema.json",
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**", "!**/src/global.css", "!**/.astro"]
+    "includes": ["**", "!**/src/global.css", "!**/.astro", "!**/dist"]
   },
   "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
