--- a/.github/workflows/biome.yaml
+++ b/.github/workflows/biome.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
         with:
-          version: 1.9.4
+          version: 2.3.9
 
       - name: Run Biome
-        run: biome ci .
+        run: biome check .
